--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -36,10 +36,20 @@
       </tr>
     </table>
     </p>
-    <div class="g">
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <a class="btn btn-block btn-social-icon btn-social btn-google" href="/auth/google" role="button">
+            <i class="fab fa-google"></i>
+            Sign Up with Google
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="g">
 
       <i class="bi bi-google"></i>
-    </div>
+    </div> -->
     <p class="text">
       I agree to the <a href="#">Term of Service </a>
       signing in
