--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,6 +130,18 @@ img{
     text-align: center;
 }
 
+.cure{
+    font-weight: bold;
+    width: 100%;
+    height: 35px;
+    border-radius: 10px;
+    font-size: 25px;
+    background-color: limegreen;
+    border-color: azure;
+    color: #fff;
+    margin-top: 10px;
+}
+
 .box-result{
     display: none;
 }
