--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
                             <label>Password</label>
                         </div>
                         <input type="submit" name="" value="login" class="sign-btn">
-                        <p class="or">
+                        <div class="or">
                         <table>
                             <tr>
                                 <td style="width:47%">
@@ -37,11 +37,20 @@
                                 </td>
                             </tr>
                         </table>
-                        </p>
-                        <div class="g">
-
-                            <i class="bi bi-google"></i>
                         </div>
+                        <div class="col">
+                            <div class="card">
+                              <div class="card-body">
+                                <a class="btn btn-block btn-social-icon btn-social btn-google" href="/auth/google" role="button">
+                                  <i class="fab fa-google"></i>
+                                  Sign In with Google
+                                </a>
+                              </div>
+                            </div>
+                          </div>
+                        <!-- <div class="g">
+                            <i class="bi bi-google"></i>
+                        </div> -->
                         <p class="text">
                             Forgotten your password or logun details? <a href="#">Get help</a>
                             signing in
