--- a/views/model.ejs
+++ b/views/model.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garden Buddy</title>
-    <link rel="icon" type="image/x-icon" href="../public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,12 +48,14 @@
                   </div>
             </div>
             <p style="padding : 10px;"> CONFIDENCE : <b><span class="confidence"></span></b> %</p>
-            <form action="/model/cure" method="get">
-                <button type="submit" class="cure">CURE</button>
-            </form>
+            
+            <button type="button" class="cure" onclick="addDiseaseCure()">CURE</button>
         </div>
     </div>
 
+    <div id="cureDetails">
+                
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tensorflow/2.0.1/tf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/progressbar.js/1.0.1/progressbar.min.js"></script>
